sumo/tests/marouter/errors/incomplete_connections/to_missing1of2_allowed/routes.marouter
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 07/17/15 12:51:12 by SUMO marouter Version dev-SVN-r18585
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/marouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
        <additional-files value="input_taz.taz.xml"/>
        <od-matrix-files value="input_od_o.fma"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
    </output>

    <processing>
        <ignore-errors value="true"/>
    </processing>

    <report>
        <xml-validation value="never"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <routeDistribution id="1_2_0.00_86400.00">
        <route cost="109.11" probability="15.60000000" edges="beg middle end"/>
        <route cost="109.16" probability="8.40000000" edges="beg beg2left left left2end end"/>
    </routeDistribution>
</routes>
